Fix Header CSS on mobile.

--- a/src/client/src/styles/App.css
+++ b/src/client/src/styles/App.css
@@ -61,7 +61,6 @@ subheader - #FFC49B
 
 @media only screen and (max-width: 768px) {
   .content {
-    max-width: 85%;
     margin: auto;
   }
 
