--- a/src/client/src/styles/Contact.css
+++ b/src/client/src/styles/Contact.css
@@ -53,3 +53,9 @@ input[type="submit"]:hover {
 
   color: #994636;
 }
+
+@media only screen and (max-width: 768px) {
+  .contact-form {
+    max-width: 85%;
+  }
+}
